Table users as U{
    username varchar(255) [pk,unique,not null]
    hashed_password varchar(500) [not null]
    full_name varchar(255) [not null]
    mobile_number bigint [default: null]
    password_changed_at timestamptz [not null,default: `now()`]
    is_email_verified bool [not null,default:false]
    created_at timestamptz [not null,default: `now()`]

    indexes {
        username
    }
}

Table items as I {
    id int [pk,increment]
    name varchar(500) [not null,unique]
    price int [not null]
    created_by varchar(255) [ref:> U.username]
    discount int [not null,default: 0]
    created_at timestamptz [not null,default: `now()`] 
    indexes{
        (id,name) 
    }

}

Table item_images as II{
    item_id int [ref: > I.id]
    image_url varchar(500) [not null]
}

Table addresses as A{
    username varchar(255) [ref: > U.username, not null]
    full_name varchar(255) [not null]
    country_code varchar(3) [not null]
    city varchar(10) [not null]
    street varchar(100) [not null]
    landmark varchar(100) [not null]
    mobile_number bigint [not null]
}
Table cart as C{
    username varchar(255) [ref: - U.username]
    id int [pk,increment]
    total_value int [not null,default:0]
}

Table cart_items as IT{
    cart_id int [not null,ref: > C.id]
    item_id int [ref: > I.id]
    quantity int [default: 0]

    indexes{
        cart_id
        (cart_id,item_id) [unique]
    }
}